
Package: R.utils
================

Version: 1.5.2 [2010-09-06]
o ROBUSTNESS: Added a more robust test for fileAccess(path, mode=2) 
  when 'path' is a directory.  Thanks Chao Chen at University of 
  Chicago for reporting issues with this.
o DOCUMENTATION: Added an example to help(fileAccess).


Version: 1.5.1 [2010-08-28]
o Added readRdHelp() for locating and reading installed 
  Rd help pages in various formats.
o Now downloadFile() supports authentication, if 'wget' is 
  available on the system.


Version: 1.5.0 [2010-08-04]
o Added stext(), which previously was in the aroma.core package.


Version: 1.4.4 [2010-07-05]
o Now arrayIndex() returns an @integer @matrix.
o DOCUMENTATION: Now the help of arrayIndex() links to the
  new arrayInd() in the base package.


Version: 1.4.3 [2010-06-23]
o BUG FIX: getAbsolutePath("//server/dir/") would incorrectly drop
  the initial double-slashes ('//') and return "/server/dir/".
  Thanks Richard Cotton at Health and Safety Laboratory (HSL), UK,
  for reporting this.


Version: 1.4.2 [2010-06-09]
o Added printf(), as a convenient wrapper for cat(sprintf(...)).


Version: 1.4.1 [2010-05-26]
o Added downloadFile() for safer and more convenient downloads.


Version: 1.4.0 [2010-03-24]
o Now R.utils requires R v2.5.0 (circa 2007) or newer.  This
  is because there was a change in base::parse() from R v2.4.1
  and R v2.5.0.  See news for R.utils v0.9.3.
o Added a NAMESPACE.


Version: 1.3.4 [2010-03-02]
o Added alpha version of an onGarbageCollect() method.
o BUG FIX: findSourceTraceback() stopped working; probably due to some
  recent updates in base::source().


Version: 1.3.3 [2010-01-25]
o ROBUSTNESS: Added validation of argument 'range' in Arguments methods.


Version: 1.3.2 [2010-01-09]
o sourceTo(..., modifiedOnly=FALSE) followed by a sourceTo(..., 
  modifiedOnly=TRUE) will now work as expected.  Before you had to 
  do at least one modifiedOnly=TRUE call before for it to work.